# DevToDigest

./: .gitignore  LICENCE  README.md  pyproject.toml
src/: .env.example  main.py
src/dev_to_digest/: __init__.py  _lang_processor.py  db.py  lang_processor_gpt.py  model.py  report.py
